added a picture folder to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,6 @@ wandb/run-20230515_005732-g6brwy9e/files/config.yaml
 wandb/run-20230515_005732-g6brwy9e/files/requirements.txt
 wandb/run-20230515_005732-g6brwy9e/files/wandb-metadata.json
 wandb/run-20230515_005732-g6brwy9e/files/wandb-summary.json
+
+# image folders
+practica/01. Beeldherkenning/Practicum/pics
