--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,5 @@ practica/01. Beeldherkenning/.DS_Store
 .gitignore
 practica/01. Beeldherkenning/Practicum/image_procssing/.DS_Store
 .gitignore
+practica/03. Probability/dobbelsteen?.py
+practica/01. Beeldherkenning/Practicum/image_procssing/pytorch/test.py
