--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,6 @@ practica/01. Beeldherkenning/Practicum/image_procssing/pytorch/testsave1.pickle
 practica/01. Beeldherkenning/Practicum/image_procssing/pytorch/testsave1.pt
 practica/01. Beeldherkenning/Practicum/glaswerk/batch.csv
 practica/01. Beeldherkenning/Practicum/image_procssing/pytorch/test.ipynb
+practica/01. Beeldherkenning/Practicum/bayes/europe.db
+practica/01. Beeldherkenning/Practicum/bayes/csv/countries_europe.csv
+practica/01. Beeldherkenning/Practicum/bayes/csv/european_union.csv
