--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,10 @@ torchvision = "*"
 torchaudio = "*"
 wandb = "*"
 pandas = "*"
+requests = "*"
 
 [dev-packages]
 ipykernel = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
